k8s/manifests/todo-api/api.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api
  namespace: todo-api
spec:
  selector:
    app: todo-api
  ports:
    - name: todo-api
      protocol: TCP
      port: 80
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-api
  namespace: todo-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-api
  template:
    metadata:
      labels:
        app: todo-api
    spec:
      containers:
        - name: todo-api
          image: todo-api:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
      volumes:
        - name: migration-dir
          emptyDir: {}
